# LD43

./: .gitignore  CMakeLists.txt  idea2.kra
Game/run/: Config.json  imgui.ini
Game/run/Assets/: .HouseGround.kra-autosave.kra  Ground.kra  House.kra  HouseBlock.kra  HouseGround.kra  House_shrunk.kra  Lamp.kra  LightMap.kra  Player.kra
Game/run/Assets/Entity/: Door.json  House.json  HouseBlock.json  HouseGround.json  Lamp.json  Other.json  Player.json  Stair.json
Game/run/Assets/Shader/: FBO_Frag.glsl
Game/src/: CMakeLists.txt  Data.cpp  Data.h  EndScene.cpp  EndScene.h  EventTriggerComponent.cpp  EventTriggerComponent.h  HouseBlock.cpp  HouseBlock.h  HouseComponent.cpp  HouseComponent.h  HouseScene.cpp  HouseScene.h  Timer.cpp  Timer.h  WorldMapScene.cpp  WorldMapScene.h  main.cpp
