if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    add_executable(LD43 main.cpp WorldMapScene.cpp WorldMapScene.h HouseComponent.cpp HouseComponent.h HouseScene.cpp HouseScene.h HouseBlock.cpp HouseBlock.h EventTriggerComponent.cpp EventTriggerComponent.h Data.cpp Data.h)
    target_link_libraries(LD43 Unknown_Engine)
    target_compile_features(LD43 PUBLIC cxx_std_17)
else()
    add_executable(LD43.html main.cpp WorldMapScene.cpp WorldMapScene.h HouseComponent.cpp HouseComponent.h HouseScene.cpp HouseScene.h HouseBlock.cpp HouseBlock.h EventTriggerComponent.cpp EventTriggerComponent.h Data.cpp Data.h EndScene.cpp EndScene.h Timer.cpp Timer.h)
    target_link_libraries(LD43.html Unknown_Engine)
    target_compile_features(LD43.html PUBLIC cxx_std_17)
endif()